[project]
name = "async-rest-factory"
dynamic = ["version"]
description = "async rest api factory utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gray Sinclair" }
]
dependencies = [
    "aiohttp>=3.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0"
]

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
